added good refs

--- a/references.bib
+++ b/references.bib
@@ -2381,3 +2381,61 @@ keywords = {ABC computer, ENIAC, MARK I, Univac, attitudes about computers, comp
   title = {Leading Women in the Field of AI. Forbes},
   year = {2020}
 }
+
+@article{boedker-third-wave:2015,
+author = {B\o{}dker, Susanne},
+title = {Third-wave HCI, 10 years later---participation and sharing},
+year = {2015},
+issue_date = {September-October 2015},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {22},
+number = {5},
+issn = {1072-5520},
+url = {https://doi.org/10.1145/2804405},
+doi = {10.1145/2804405},
+journal = {Interactions},
+month = aug,
+pages = {24–31},
+numpages = {8}
+}
+
+@article{frauenberger-entanglement-hci:2019,
+author = {Frauenberger, Christopher},
+title = {Entanglement HCI The Next Wave?},
+year = {2019},
+issue_date = {February 2020},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {27},
+number = {1},
+issn = {1073-0516},
+url = {https://doi.org/10.1145/3364998},
+doi = {10.1145/3364998},
+abstract = {This article argues that our intimate entanglement with digital technologies is challenging the foundations of current HCI research and practice. Our relationships to virtual realities, artificial intelligence, neuro-implants or pervasive, cyberphysical systems generate ontological uncertainties, epistemological diffusion and ethical conundrums that require us to consider evolving the current research paradigm. I look to post-humanism and relational ontologies to sketch what I call Entanglement HCI in response. I review selected theories—Actor-Network Theory, Post-Phenomenology, Object-Oriented Ontology, Agential Realism—and their existing influences on HCI literature. Against this background, I develop Entanglement HCI from the following four perspectives: (a) the performative relationship between humans and technology; (b) the re-framing of knowledge generation processes around phenomena; (c) the tracing of accountabilities, responsibilities and ethical encounters; and (d) the practices of design and mattering that move beyond user-centred design.},
+journal = {ACM Trans. Comput.-Hum. Interact.},
+month = nov,
+articleno = {2},
+numpages = {27},
+keywords = {Entanglement, new materialism, philosophy, posthumanism}
+}
+
+@article{chignell-evolution-hci:2023,
+author = {Chignell, Mark and Wang, Lu and Zare, Atefeh and Li, Jamy},
+title = {The Evolution of HCI and Human Factors: Integrating Human and Artificial Intelligence},
+year = {2023},
+issue_date = {April 2023},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {30},
+number = {2},
+issn = {1073-0516},
+url = {https://doi.org/10.1145/3557891},
+doi = {10.1145/3557891},
+abstract = {We review HCI history from both the perspective of its 1980s split with human factors and its nature as a discipline. We then revisit human augmentation as an alternative to user friendliness that seems particularly relevant in the areas of inclusive design and artificial intelligence. Viewing human-AI interaction as a kind of human augmentation raises issues such as how to promote trust and situation awareness. We also pose the question: Can HCI and human factors engineering work together to solve the increasingly urgent challenges of human-AI technology? In an initial look at this question, we contrast the different approaches of HCI and human factors on emerging AI research. This article concludes by considering other potentially promising paths for HCI. We propose more collaboration between HCI and human factors, or related disciplines, in the future to address the massive challenges posed by the rapid growth in data science and artificial intelligence.},
+journal = {ACM Trans. Comput.-Hum. Interact.},
+month = mar,
+articleno = {17},
+numpages = {30},
+keywords = {artificial intelligence (AI), cognitive science, Human factors}
+}
