--- a/references.bib
+++ b/references.bib
@@ -2439,3 +2439,21 @@ articleno = {17},
 numpages = {30},
 keywords = {artificial intelligence (AI), cognitive science, Human factors}
 }
+
+@inproceedings{kaptelinin-postcognitivist-hci:2003,
+author = {Kaptelinin, Victor and Nardi, Bonnie and B\o{}dker, Susanne and Carroll, John and Hollan, Jim and Hutchins, Edwin and Winograd, Terry},
+title = {Post-cognitivist HCI: second-wave theories},
+year = {2003},
+isbn = {1581136374},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/765891.765933},
+doi = {10.1145/765891.765933},
+abstract = {Historically, the dominant paradigm in HCI, when it appeared as a field in early 80s, was information processing ("cognitivist") psychology. In recent decades, as the focus of research moved beyond information processing to include how the use of technology emerges in social, cultural and organizational contexts, a variety of conceptual frameworks have been proposed as candidate theoretical foundations for "second-wave" HCI and CSCW. The purpose of this panel is to articulate similarities and differences between some of the leading "post-cognitivist" theoretical perspectives: language/ action, activity theory, and distributed cognition.},
+booktitle = {CHI '03 Extended Abstracts on Human Factors in Computing Systems},
+pages = {692–693},
+numpages = {2},
+keywords = {language/action, distributed cognition, cognitive approach, activity theory, HCI theories},
+location = {Ft. Lauderdale, Florida, USA},
+series = {CHI EA '03}
+}
