--- a/references.bib
+++ b/references.bib
@@ -2457,3 +2457,18 @@ keywords = {language/action, distributed cognition, cognitive approach, activity
 location = {Ft. Lauderdale, Florida, USA},
 series = {CHI EA '03}
 }
+
+@book{shneiderman-human-centered-ai:2022,
+    author = {Shneiderman, Ben},
+    title = {Human-Centered AI},
+    publisher = {Oxford University Press},
+    year = {2022},
+    month = {01},
+    abstract = {Researchers, developers, business leaders, policy makers, and others are expanding the technology-centered scope of artificial intelligence (AI) to include human-centered AI (HCAI) ways of thinking. This expansion from an algorithm-focused view to embrace a human-centered perspective can shape the future of technology so as to better serve human needs. Educators, designers, software engineers, product managers, evaluators, and government agency staffers can build on AI-driven technologies to design products and services that make life better for people and enable people to care for each other. Humans have always been tool builders, and now they are supertool builders, whose inventions can improve our health, family life, education, business, the environment, and much more. The remarkable progress in algorithms for machine and deep learning have opened the doors to new opportunities, and some dark possibilities. However, a bright future awaits AI researchers, developers, business leaders, policy makers, and others who build on their working methods by including HCAI strategies of design and testing. This enlarged vision can shape the future of technology so as to better serve human needs. As many technology companies and thought leaders have said, the goal is not to replace people, but to empower them by making design choices that give humans control over technology.},
+    isbn = {9780192845290},
+    doi = {10.1093/oso/9780192845290.001.0001},
+    url = {https://doi.org/10.1093/oso/9780192845290.001.0001},
+    eprint = {https://academic.oup.com/book/41126/book-pdf/50987951/9780192659996_web.pdf},
+}
+
+
