--- a/references.bib
+++ b/references.bib
@@ -2470,5 +2470,97 @@ series = {CHI EA '03}
     url = {https://doi.org/10.1093/oso/9780192845290.001.0001},
     eprint = {https://academic.oup.com/book/41126/book-pdf/50987951/9780192659996_web.pdf},
 }
+@article{shneiderman1997maes,
+author = {Shneiderman, Ben and Maes, Pattie},
+title = {Direct manipulation vs. interface agents},
+year = {1997},
+issue_date = {Nov./Dec. 1997},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {4},
+number = {6},
+issn = {1072-5520},
+url = {https://doi.org/10.1145/267505.267514},
+doi = {10.1145/267505.267514},
+journal = {Interactions},
+month = nov,
+pages = {42–61},
+numpages = {20}
+}
+@article{klien2004ten,
+  author={Klien, G. and Woods, D.D. and Bradshaw, J.M. and Hoffman, R.R. and Feltovich, P.J.},
+  journal={IEEE Intelligent Systems}, 
+  title={Ten challenges for making automation a "team player" in joint human-agent activity}, 
+  year={2004},
+  volume={19},
+  number={6},
+  pages={91-95},
+  keywords={Automation;Humans;Cognition;Teamwork;Intelligent agent;Systems engineering and theory;Delay;Electric breakdown;Displays;Technology management;automation;human-agent activity;joint activity},
+  doi={10.1109/MIS.2004.74}
+}
 
+@article{benjamins2007robots,
+	abstract = {The team has become a popular model to organize joint human--robot behavior. Robot teammates are designed with high-levels of autonomy and well-developed coordination skills to aid humans in unpredictable environments. In this paper, we challenge the assumption that robots will succeed as teammates alongside humans. Drawing from the literature on human teams, we evaluate robots' potential to meet the requirements of successful teammates. We argue that lacking humanlike mental models and a sense of self, robots may prove untrustworthy and will be rejected from human teams. Benchmarks for evaluating human--robot teams are included, as are guidelines for defining alternative structures for human--robot groups.},
+	author = {Groom, Victoria and Nass, Clifford},
+	doi = {https://doi.org/10.1075/is.8.3.10gro},
+	issn = {1572-0373},
+	journal = {Interaction Studies},
+	keywords = {social robotics},
+	number = {3},
+	pages = {483-500},
+	publisher = {John Benjamins},
+	title = {Can robots be teammates?: Benchmarks in human--robot teams},
+	type = {Journal Article},
+	url = {https://www.jbe-platform.com/content/journals/10.1075/is.8.3.10gro},
+	volume = {8},
+	year = {2007},
+	bdsk-url-1 = {https://www.jbe-platform.com/content/journals/10.1075/is.8.3.10gro},
+	bdsk-url-2 = {https://doi.org/10.1075/is.8.3.10gro}}
+@article{david2016defense,
+  title={Defense science board summer study on autonomy},
+  author={David, Ruth A and Nielsen, Paul},
+  year={2016}
+}
 
+@article{poland2018carcrash,
+	author = {Kristin Poland and Mary Pat McKay and Deb Bruce and Ensar Becic},
+	doi = {10.1080/15389588.2018.1532211},
+	eprint = {https://doi.org/10.1080/15389588.2018.1532211},
+	journal = {Traffic Injury Prevention},
+	note = {PMID: 30841795},
+	number = {sup2},
+	pages = {S153--S156},
+	publisher = {Taylor \& Francis},
+	title = {Fatal crash between a car operating with automated control systems and a tractor-semitrailer truck},
+	url = {https://doi.org/10.1080/15389588.2018.1532211},
+	volume = {19},
+	year = {2018},
+	bdsk-url-1 = {https://doi.org/10.1080/15389588.2018.1532211}
+}
+@misc{apple2018guideline,
+  author = {{Apple Developer}},
+  howpublished = {\url{https://developer.apple.com/design/human-interface-guidelines/ios/overview/themes/}},
+  title = {Human Interface Guidelines.},
+  year = {2019},
+  note = {Accessed: 2025-10-18}
+}
+@article{charles1999normal,
+  title={Normal accidents: living with high-risk technologies},
+  author={Perrow, Charles},
+  journal={New Brunswick, NJ},
+  year={1999}
+}
+@incollection{woods2017essential,
+  title={Essential characteristics of resilience},
+  author={Woods, David D},
+  booktitle={Resilience engineering},
+  pages={21--34},
+  year={2017},
+  publisher={CRC Press}
+}
+@article{bryson2020artificial,
+  title={The Artificial Intelligence of the Ethics of Artificial Intelligence: An Introductory Overview for Law},
+  author={Bryson, Joanna j},
+  journal={The Oxford Handbook of the Ethics of Artificial Intelligence.},
+  year={2020}
+}
