--- a/references.bib
+++ b/references.bib
@@ -2564,3 +2564,14 @@ numpages = {20}
   journal={The Oxford Handbook of the Ethics of Artificial Intelligence.},
   year={2020}
 }
+
+@ARTICLE{parasuraman-automation-model:2000,
+  author={Parasuraman, R. and Sheridan, T.B. and Wickens, C.D.},
+  journal={IEEE Transactions on Systems, Man, and Cybernetics - Part A: Systems and Humans}, 
+  title={A model for types and levels of human interaction with automation}, 
+  year={2000},
+  volume={30},
+  number={3},
+  pages={286-297},
+  keywords={Humans;Design automation;NASA;Hardware;Software;Man machine systems;Costs;Information analysis;Reliability engineering;Design engineering},
+  doi={10.1109/3468.844354}}
