fix sutherland headset image

--- a/references.bib
+++ b/references.bib
@@ -1662,7 +1662,7 @@
   publisher = {Cambridge University Press}
 }
 
-@inproceedings{surtherland1967ar,
+@inproceedings{sutherland1967ar,
   author    = {Sutherland, Ivan E.},
   title     = {A head-mounted three dimensional display},
   year      = {1968},
