cleaning up symbols

--- a/notebooks/wk10/comp3900_wk10_live_coding_spotify_stats.ipynb
+++ b/notebooks/wk10/comp3900_wk10_live_coding_spotify_stats.ipynb
@@ -546,7 +546,7 @@
       "source": [
         "### Degree of Freedom\n",
         "\n",
-        "Since groups are very different in size and may have different variances, we use Welch’s t-test, which adjusts the degrees of freedom with the Welch–Satterthwaite formula. This gives a more accurate p-value when assumptions of equal variance are violated.\n"
+        "Since groups are very different in size and may have different variances, we use Welch's t-test, which adjusts the degrees of freedom with the Welch–Satterthwaite formula. This gives a more accurate p-value when assumptions of equal variance are violated.\n"
       ]
     },
     {
@@ -586,7 +586,7 @@
         "- The negative t-statistic suggests that explicit songs have higher energy (if you did explicit=1 minus explicit=0).\n",
         "- We reject the null hypothesis (p < 0.05).\n",
         "\n",
-        "**Note** Welch’s t-test was correctly used because of unequal group sizes and unknown variances."
+        "**Note** Welch's t-test was correctly used because of unequal group sizes and unknown variances."
       ]
     },
     {
@@ -880,7 +880,7 @@
       },
       "source": [
         "\n",
-        "> Does a song’s tempo vary depending on both its musical key and mode (major/minor)?\n",
+        "> Does a song's tempo vary depending on both its musical key and mode (major/minor)?\n",
         "\n",
         "Key = 12 levels (categorical)\n",
         "Mode = 0 (minor), 1 (major)\n",
