--- a/references.bib
+++ b/references.bib
@@ -31,7 +31,7 @@
   address   = {New York, NY, USA},
   url       = {https://doi.org/10.1145/3613904.3641897},
   doi       = {10.1145/3613904.3641897},
-  abstract  = {Although exercising at home has benefits, it is not always engaging or motivating. Augmented Reality (AR) head-mounted displays (HMDs) offer the potential to make in-home exercising and exergaming more inclusive and immersive, but there is limited research investigating how such systems can be designed. We employed a participatory design approach involving semi-structured interviews to investigate how homes can be augmented to facilitate exercising experiences. We developed 10 recommendations for developing home-based exercising experiences using AR HMDs. Our results further contribute to the existing body of research on the use of AR for exercising, home applications, and everyday objects by presenting the first foundational study investigating the wide range of exercises that can be supported through AR HMDs in home environments and the different ways home elements may support these exercises, and laying the groundwork for future work developing home-based exergaming through AR HMDs to increase people’s physical activity levels.},
+  abstract  = {Although exercising at home has benefits, it is not always engaging or motivating. Augmented Reality (AR) head-mounted displays (HMDs) offer the potential to make in-home exercising and exergaming more inclusive and immersive, but there is limited research investigating how such systems can be designed. We employed a participatory design approach involving semi-structured interviews to investigate how homes can be augmented to facilitate exercising experiences. We developed 10 recommendations for developing home-based exercising experiences using AR HMDs. Our results further contribute to the existing body of research on the use of AR for exercising, home applications, and everyday objects by presenting the first foundational study investigating the wide range of exercises that can be supported through AR HMDs in home environments and the different ways home elements may support these exercises, and laying the groundwork for future work developing home-based exergaming through AR HMDs to increase people's physical activity levels.},
   booktitle = {Proceedings of the 2024 CHI Conference on Human Factors in Computing Systems},
   articleno = {311},
   numpages  = {14},
@@ -270,7 +270,7 @@
 }
 
 @article{byrne-worked-thematic-analysis:2022,
-  title     = {A worked example of Braun and Clarke’s approach to reflexive thematic analysis},
+  title     = {A worked example of Braun and Clarke's approach to reflexive thematic analysis},
   author    = {Byrne, David},
   journal   = {Quality \& quantity},
   volume    = {56},
@@ -955,7 +955,7 @@
   address   = {New York, NY, USA},
   url       = {https://doi.org/10.1145/3706599.3719895},
   doi       = {10.1145/3706599.3719895},
-  abstract  = {The recent period of Internet restriction in Bangladesh, which occurred from July 14 to August 5 during the anti-discrimination student movement, had a significant impact on individuals’ lives. This study aims to know how their communication, information access, and daily activities were affected and how they used to cope with that, again what were their expectations from social media and communication tools. Through interviews with 15 individuals from diverse demographics, supported by qualitative analysis and sentiment analysis, the findings provide valuable insights into the challenges faced, experiences shared, and recommendations offered by participants. Based on these findings, we propose design implications to develop a robust digital infrastructure capable of addressing similar challenges in future scenarios. Our work contributes to CHI by serving as a foundation for policymakers and designers to create effective solutions that mitigate the adverse effects of Internet shutdowns.},
+  abstract  = {The recent period of Internet restriction in Bangladesh, which occurred from July 14 to August 5 during the anti-discrimination student movement, had a significant impact on individuals' lives. This study aims to know how their communication, information access, and daily activities were affected and how they used to cope with that, again what were their expectations from social media and communication tools. Through interviews with 15 individuals from diverse demographics, supported by qualitative analysis and sentiment analysis, the findings provide valuable insights into the challenges faced, experiences shared, and recommendations offered by participants. Based on these findings, we propose design implications to develop a robust digital infrastructure capable of addressing similar challenges in future scenarios. Our work contributes to CHI by serving as a foundation for policymakers and designers to create effective solutions that mitigate the adverse effects of Internet shutdowns.},
   booktitle = {Proceedings of the Extended Abstracts of the CHI Conference on Human Factors in Computing Systems},
   articleno = {99},
   numpages  = {9},
@@ -977,7 +977,7 @@
 }
 
 @article{krug2014don,
-  title   = {Don’t make me think, Revisited},
+  title   = {Don't make me think, Revisited},
   author  = {Krug, Steve and others},
   journal = {A Common Sense Approach to Web and Mobile Usability},
   volume  = {3},
@@ -1049,7 +1049,7 @@
 
 @inproceedings{ljungblad-what-matters:2021,
   author    = {Ljungblad, Sara and Man, Yemao and Bayta\c{s}, Mehmet Ayd\i{}n and Gamboa, Mafalda and Obaid, Mohammad and Fjeld, Morten},
-  title     = {What Matters in Professional Drone Pilots’ Practice? An&nbsp;Interview&nbsp;Study&nbsp;to Understand the Complexity of Their Work and Inform Human-Drone Interaction Research},
+  title     = {What Matters in Professional Drone Pilots' Practice? An&nbsp;Interview&nbsp;Study&nbsp;to Understand the Complexity of Their Work and Inform Human-Drone Interaction Research},
   year      = {2021},
   isbn      = {9781450380966},
   publisher = {Association for Computing Machinery},
@@ -1749,7 +1749,7 @@
   address   = {New York, NY, USA},
   url       = {https://doi.org/10.1145/3698061.3726905},
   doi       = {10.1145/3698061.3726905},
-  abstract  = {In musical collaboration, digital musical instruments often hinder effective communication and engagement by restricting visibility and limiting gestural and non-verbal interactions. These challenges reduce musicians’ situational awareness and complicate cohesive performance. To address this, we developed a head-mounted augmented reality (AR) system to enhance collaborative musical experiences by visualising musicians’ hand movements, eye gaze positions, and instrument interactions in real-time. We conducted a user study involving four pairs of musicians performing live music using different AR interface configurations. The results suggest that the AR system can enhance situational awareness and assist collaboration, as reflected in questionnaire responses. Interviews indicated that real-time visualisations of bodily movements and interactions helped participants better understand the collaborative process and anticipate their collaborators’ actions. These findings point to the potential of AR-assisted visualisation to support creative collaboration by tailoring visual information to different needs. Future research could explore its application in broader contexts of real-time creative cooperation.},
+  abstract  = {In musical collaboration, digital musical instruments often hinder effective communication and engagement by restricting visibility and limiting gestural and non-verbal interactions. These challenges reduce musicians' situational awareness and complicate cohesive performance. To address this, we developed a head-mounted augmented reality (AR) system to enhance collaborative musical experiences by visualising musicians' hand movements, eye gaze positions, and instrument interactions in real-time. We conducted a user study involving four pairs of musicians performing live music using different AR interface configurations. The results suggest that the AR system can enhance situational awareness and assist collaboration, as reflected in questionnaire responses. Interviews indicated that real-time visualisations of bodily movements and interactions helped participants better understand the collaborative process and anticipate their collaborators' actions. These findings point to the potential of AR-assisted visualisation to support creative collaboration by tailoring visual information to different needs. Future research could explore its application in broader contexts of real-time creative cooperation.},
   booktitle = {Proceedings of the 2025 Conference on Creativity and Cognition},
   pages     = {99–112},
   numpages  = {14},
@@ -1922,7 +1922,7 @@ publisher = {Association for Computing Machinery},
 address = {New York, NY, USA},
 url = {https://doi.org/10.1145/3491102.3501916},
 doi = {10.1145/3491102.3501916},
-abstract = {We present a performance-led inquiry that involved a live coder programming movement-based interactive sound and two dance improvisers. During two years of collaboration, we developed a joint improvisation practice where the interactions between the dancers’ movement and the sound feedback are programmed on the fly through live coding and movement sensing. To that end, we designed a new live coding environment called CO/DA that facilitates the real-time manipulation of continuous streams of the dancers’ motion data for interactive sound synthesis. Through an autoethnographic inquiry, we describe our practice of sound and movement improvisation where live coding dynamically changes how the dancers’ movements generate sound, which in turn influences the dancers’ improvisation. We then discuss the value, potential and challenges of our dance/code improvisation practice, along with its implications as a design method.},
+abstract = {We present a performance-led inquiry that involved a live coder programming movement-based interactive sound and two dance improvisers. During two years of collaboration, we developed a joint improvisation practice where the interactions between the dancers' movement and the sound feedback are programmed on the fly through live coding and movement sensing. To that end, we designed a new live coding environment called CO/DA that facilitates the real-time manipulation of continuous streams of the dancers' motion data for interactive sound synthesis. Through an autoethnographic inquiry, we describe our practice of sound and movement improvisation where live coding dynamically changes how the dancers' movements generate sound, which in turn influences the dancers' improvisation. We then discuss the value, potential and challenges of our dance/code improvisation practice, along with its implications as a design method.},
 booktitle = {Proceedings of the 2022 CHI Conference on Human Factors in Computing Systems},
 articleno = {482},
 numpages = {13},
@@ -1990,7 +1990,7 @@ series = {CHI '20}
 }
 @inproceedings{trajkova2023holographicai,
 author = {Trajkova, Milka and Deshpande, Manoj and Knowlton, Andrea and Monden, Cassandra and Long, Duri and Magerko, Brian},
-title = {AI Meets Holographic Pepper’s Ghost: A Co-Creative Public Dance Experience},
+title = {AI Meets Holographic Pepper's Ghost: A Co-Creative Public Dance Experience},
 year = {2023},
 isbn = {9781450398985},
 publisher = {Association for Computing Machinery},
@@ -2014,7 +2014,7 @@ publisher = {Association for Computing Machinery},
 address = {New York, NY, USA},
 url = {https://doi.org/10.1145/3613904.3642677},
 doi = {10.1145/3613904.3642677},
-abstract = {Co-creation in embodied contexts is central to the human experience but is often lacking in our interactions with computers. We seek to develop a better understanding of embodied human co-creativity to inform the human-centered design of machines that can co-create with us. In this paper, we ask: What characterizes dancers’ experiences of embodied dyadic interaction in movement improvisation? To answer this, we ran focus groups with 24 university dance students and conducted a thematic analysis of their responses. We synthesize our findings in an Interconnected Model of Improvisational Dance Inputs, where movement choices are shaped by the interplay between in-the-moment influences between the self, partner, and the environment, a set of generative strategies, and heuristics for a successful collaboration. We present a set of design recommendations for LuminAI, a co-creative AI dance partner. Our contributions can inform the design of AI in embodied co-creative domains.},
+abstract = {Co-creation in embodied contexts is central to the human experience but is often lacking in our interactions with computers. We seek to develop a better understanding of embodied human co-creativity to inform the human-centered design of machines that can co-create with us. In this paper, we ask: What characterizes dancers' experiences of embodied dyadic interaction in movement improvisation? To answer this, we ran focus groups with 24 university dance students and conducted a thematic analysis of their responses. We synthesize our findings in an Interconnected Model of Improvisational Dance Inputs, where movement choices are shaped by the interplay between in-the-moment influences between the self, partner, and the environment, a set of generative strategies, and heuristics for a successful collaboration. We present a set of design recommendations for LuminAI, a co-creative AI dance partner. Our contributions can inform the design of AI in embodied co-creative domains.},
 booktitle = {Proceedings of the 2024 CHI Conference on Human Factors in Computing Systems},
 articleno = {890},
 numpages = {22},
@@ -2040,7 +2040,7 @@ location = {San Diego, CA, USA},
 series = {C\&C '19}
 }
 @inproceedings{privato2023thales,
- abstract = {Thales is a composed instrument consisting of two hand-held magnetic controllers whose interactions with each other and with other magnets produce the somatosensory manifestation of a tangible interface that the musician generates and shapes in the act of performing. In this paper we provide a background for the development of Thales by describing the application of permanent magnets in HCI and musical interfaces. We also introduce the instrument’s sound generation based on a neural synthesis model and contextualise the system in relation with the concept of magnetic scores. We report on our preliminary user study and discuss the somatosensory response that characterise Thales, observing the interaction between the opposing magnetic field of the controllers as a tangible magnetic interface. Finally, we investigate its nature from the perspective of performative posthumanist ontologies.},
+ abstract = {Thales is a composed instrument consisting of two hand-held magnetic controllers whose interactions with each other and with other magnets produce the somatosensory manifestation of a tangible interface that the musician generates and shapes in the act of performing. In this paper we provide a background for the development of Thales by describing the application of permanent magnets in HCI and musical interfaces. We also introduce the instrument's sound generation based on a neural synthesis model and contextualise the system in relation with the concept of magnetic scores. We report on our preliminary user study and discuss the somatosensory response that characterise Thales, observing the interaction between the opposing magnetic field of the controllers as a tangible magnetic interface. Finally, we investigate its nature from the perspective of performative posthumanist ontologies.},
  address = {Mexico City, Mexico},
  articleno = {54},
  author = {Nicola Privato and Thor Magnusson and Einar Torfi Einarsson},
